<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:padding="16dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center">
        <TextView
            android:text="@string/about_me"
            style="@style/TextDetail.Title" />
    </LinearLayout>

    <View
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/textColor"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_gravity="center_horizontal"
        android:gravity="center">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/img_me"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:src="@drawable/me"
        android:scaleType="centerCrop"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_gravity="center_horizontal"
        android:gravity="center">
            <TextView
                android:text="@string/my_name"
                style="@style/TextDetail.Title"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center">
            <TextView
                android:text="@string/my_email"
                style="@style/TextDetail.Email"/>
    </LinearLayout>
</LinearLayout>