<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp"
    tools:context=".DetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center">
        <TextView
            android:id="@+id/tv_item_title_detail"
            style="@style/TextDetail.Title" />
    </LinearLayout>

    <View
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/textColor"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_gravity="center_horizontal"
        android:gravity="center">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/img_item_detail"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:src="@android:color/darker_gray"/>
    </LinearLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:layout_marginTop="25dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp">

        <TextView
            style="@style/TextDetail.Name"
            android:text="@string/footballs_name"/>

        <TextView
            android:id="@+id/tv_item_name_detail"
           style="@style/TextDetail.Content" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                style="@style/TextDetail.Name"
                android:text="@string/about"/>

            <TextView
                android:id="@+id/tv_about"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                style="@style/TextDetail.Content" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp">

            <TextView
                style="@style/TextDetail.Name"
                android:text="@string/coach"/>

            <TextView
                android:id="@+id/tv_coach"
                style="@style/TextDetail.Content"/>
        </TableRow>
    </TableLayout>
</LinearLayout>